--- a/website/templates/add_member.html
+++ b/website/templates/add_member.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<form action="/show_members" method="post">
+<form align="center" style="font-size:34pt;" action="/show_members" method="post">
   <div>
     <label>שם פרטי :</label>
     <input type="text" name="first_name" required>
